fixed output word wrapping and improved ui text

--- a/web/css/style.css
+++ b/web/css/style.css
@@ -183,8 +183,9 @@ h3 {
 
 	min-height: 100px;
 
-  	word-wrap: break-word;
+    word-break:break-all;
 	overflow-y: auto;
+	overflow-x: hidden;
 
 	flex-basis: 0;
 }
